new file:   utils/md5.go
