# docs/swagger.json
@@ -26,13 +26,7 @@
             }
         },
         "/user/createUser": {
-            "get": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
+            "post": {
                 "tags": [
                     "用户模块"
                 ],
@@ -42,21 +36,21 @@
                         "type": "string",
                         "description": "name",
                         "name": "name",
-                        "in": "query",
+                        "in": "formData",
                         "required": true
                     },
                     {
                         "type": "string",
                         "description": "password",
                         "name": "password",
-                        "in": "query",
+                        "in": "formData",
                         "required": true
                     },
                     {
                         "type": "string",
                         "description": "repassword",
                         "name": "repassword",
-                        "in": "query",
+                        "in": "formData",
                         "required": true
                     }
                 ],
@@ -71,13 +65,7 @@
             }
         },
         "/user/deleteUser": {
-            "get": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
+            "post": {
                 "tags": [
                     "用户模块"
                 ],
@@ -87,7 +75,7 @@
                         "type": "string",
                         "description": "id",
                         "name": "id",
-                        "in": "query",
+                        "in": "formData",
                         "required": true
                     }
                 ],
@@ -113,6 +101,38 @@
                     "用户模块"
                 ],
                 "summary": "获取用户列表",
+                "responses": {
+                    "200": {
+                        "description": "code\",\"message\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/user/loginUser": {
+            "post": {
+                "tags": [
+                    "用户模块"
+                ],
+                "summary": "用户登陆",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "name",
+                        "name": "name",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "password",
+                        "name": "password",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "code\",\"message\"}",
