# router/app.go
@@ -19,9 +19,11 @@ func Router() *gin.Engine {
 
 	r.GET("/user/getUserList", service.GetUserList)
 
-	r.GET("/user/createUser", service.CreateUser)
+	r.POST("/user/createUser", service.CreateUser)
 
-	r.GET("/user/deleteUser", service.DeleteUser)
+	r.POST("/user/loginUser", service.LoginUser)
+
+	r.POST("/user/deleteUser", service.DeleteUser)
 
 	r.POST("/user/updateUser", service.UpdateUser)
 
